Switch to personal zmk fork with improvements

--- a/config/corneish_zen.conf
+++ b/config/corneish_zen.conf
@@ -1,5 +1,9 @@
 # Go to sleep after 30 min (30*60*1000ms)
 CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
+CONFIG_CUSTOM_WIDGET_LOGO_IMAGE_LPKB=y
+CONFIG_ZMK_DISPLAY_HIDE_MOMENTARY_LAYERS=y
+# Full refresh every 10 minutes to combat ghosting
+CONFIG_ZMK_DISPLAY_FULL_REFRESH_PERIOD=36000
 
 # Turn on logging, and set ZMK logging to debug output
 # CONFIG_ZMK_USB_LOGGING=y
